redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  # namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
  template:
    metadata:
      labels:
        name: redis-pod
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
