result-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deploy
  labels:
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: result-app-pod
  template:
    metadata:
      name: result-app-pod
      labels:
        name: result-app-pod
    spec:
      containers:
        - name: result-app
          image: kodekloud/examplevotingapp_result:v1
          ports:
            - containerPort: 80
