voting-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deploy
  # namespace: dev
  labels:
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: voting-app-pod
  template:
    metadata:
      labels:
        name: voting-app-pod
    spec:
      containers:
        - name: voting-app
          image: kodekloud/examplevotingapp_vote:v1
          ports:
            - containerPort: 80
