worker-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app-deploy
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worker-app-pod
  template:
    metadata:
      name: worker-app-pod
      labels:
        name: worker-app-pod
    spec:
      containers:
        - name: worker-app
          image: kodekloud/examplevotingapp_worker:v2
