postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: postgres-service
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: postgres-pod
