result-app-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-app-service
  labels:
    name: result-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: result-app-pod
