voting-app-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-service
  labels:
    name: voting-app-service
spec:
  type: ClusterIP
  selector:
    name: voting-app-pod
  ports:
    - port: 80
      targetPort: 80
