ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "result-app-service"
spec:
  rules:
    - http:
        paths:
          # voting 页面
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: voting-app-service
                port:
                  number: 80
          # result 页面
          - path: /result(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: result-app-service
                port:
                  number: 80
